--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -6049,12 +6049,26 @@ button.btn-floating {
   }
 }
 
-.modal h1, .modal h2, .modal h3, .modal h4 {
+.modal.modal-small {
+    max-width: 260px;
+}
+.modal.modal-medium {
+    max-width: 460px;
+}
+.modal.modal-large {
+    max-width: 660px;
+}
+
+.modal h1, .modal h2, .modal h3, .modal h4, .modal h5, .modal h6 {
   margin-top: 0;
 }
 
+.modal h1:empty, .modal h2:empty, .modal h3:empty, .modal h4:empty, .modal h5:empty, .modal h6:empty {
+  display: none;
+}
+
 .modal .modal-content {
-  padding: 24px;
+  padding: 1.5rem;
 }
 
 .modal .modal-close {
@@ -6064,14 +6078,9 @@ button.btn-floating {
 .modal .modal-footer {
   border-radius: 0 0 2px 2px;
   background-color: #fafafa;
-  padding: 4px 6px;
-  height: 56px;
   width: 100%;
   text-align: right;
-}
-
-.modal .modal-footer .btn, .modal .modal-footer .btn-large, .modal .modal-footer .btn-small, .modal .modal-footer .btn-flat {
-  margin: 6px 0;
+  margin: 1.5rem 0 0;
 }
 
 .modal-overlay {
