--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -3202,6 +3202,18 @@ table {
   border-spacing: 0;
 }
 
+table.invoice thead > tr {
+  border-width: 0 0 2px;
+  border-style: solid;
+  border-color: rgba(200, 200, 200, .4);
+}
+
+table.invoice tfoot > tr {
+  border-width: 2px 0 0;
+  border-style: solid;
+  border-color: rgba(200, 200, 200, .4);
+}
+
 table.striped tr {
   border-bottom: none;
 }
@@ -3220,7 +3232,7 @@ table.highlight > tbody > tr {
 }
 
 table.highlight > tbody > tr:hover {
-  background-color: rgba(242, 242, 242, 0.5);
+  background-color: rgba(100, 100, 100, .1);
 }
 
 table.centered thead tr th, table.centered tbody tr td {
@@ -5773,7 +5785,7 @@ small {
 }
 
 .btn:hover, .btn-large:hover, .btn-small:hover {
-  background-color: rgba(0, 0, 0, .1);
+  // test
 }
 
 .btn-floating {
@@ -9624,7 +9636,7 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
   -webkit-transform: translate(-100%, 32px);
 }
 .step-title {
-  padding: 4rem 0;
+  padding: 2rem 0;
   display: block;
   opacity: .4;
 }
@@ -9660,4 +9672,98 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 }
 .step-title.active > span.text {
   color: #8bc34a;
+}
+
+.credit-card {
+  background-color: #f9f9f9;
+  border-radius: .4rem;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #ccc;
+  width: 200px;
+  height: 128px;
+  position: relative;
+
+            transition: all cubic-bezier(.6, .3, .2, .9) .2s;
+    -webkit-transition: all cubic-bezier(.6, .3, .2, .9) .2s;
+}
+.credit-card > .card-item {
+  border-radius: .2rem;
+  background-color: #e9e9e9;
+
+  position: absolute;
+  text-transform: uppercase;
+  font-size: 9px;
+  overflow: hidden;
+  white-space: nowrap;
+
+  padding: 0 0 0 4px;
+}
+.credit-card > .card-item.active {
+  background-color: #ffecb3;
+}
+.credit-card > .card-chip {
+  width: 32px;
+  height: 32px;
+  top: 24px;
+  left: 16px;
+}
+.credit-card > .card-number {
+  width: 170px;
+  height: 16px;
+  line-height: 16px;
+  top: 72px;
+  left: 16px;
+}
+.credit-card > .card-month {
+  width: 24px;
+  height: 16px;
+  line-height: 16px;
+  top: 96px;
+  left: 136px;
+
+          transform: skew(-10deg);
+  -webkit-transform: skew(-10deg);
+}
+.credit-card > .card-year {
+  width: 24px;
+  height: 16px;
+  line-height: 16px;
+  top: 96px;
+  left: 162px;
+
+          transform: skew(-10deg);
+  -webkit-transform: skew(-10deg);
+}
+.credit-card > .card-name {
+  width: 112px;
+  height: 16px;
+  line-height: 16px;
+  top: 96px;
+  left: 16px;
+}
+.credit-card.card-flip {
+          transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+}
+.credit-card > .card-ccv {
+  background-color: #ffecb3;
+
+  width: 32px;
+  height: 16px;
+  line-height: 16px;
+  top: 72px;
+  left: 16px;
+
+          transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+}
+.credit-card > .card-back {
+  display: none;
+}
+.credit-card.card-flip > .card-back {
+  display: table;
+}
+.credit-card.card-flip > .card-front {
+  display: none;
 }
