--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -3,6 +3,10 @@
  * Copyright 2014-2017 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+
+::-moz-selection { background-color: rgba(200, 200, 200, .4); }
+::selection { background-color: rgba(200, 200, 200, .4); }
+
 .d-none {
   display: none !important;
 }
@@ -9766,4 +9770,44 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 }
 .credit-card.card-flip > .card-front {
   display: none;
+}
+
+/* --- recaptcha --- */
+
+@keyframes captcha-loading {
+    0% {
+        background-position: -200px 0;
+        background-repeat: no-repeat;
+    }
+
+    100% {
+        background-position: 200px 0;
+        background-repeat: no-repeat;
+    }
+}
+
+.captcha {
+    background-color: #f9f9f9;
+
+    background-image:         linear-gradient(to right, #f9f9f9 5%, #f0f0f0 45%, #f9f9f9 90%);
+    background-image: -webkit-linear-gradient(to right, #f9f9f9 5%, #f0f0f0 45%, #f9f9f9 90%);
+
+            animation: captcha-loading 1s cubic-bezier(0, 1, 1, 1) infinite;
+    -webkit-animation: captcha-loading 1s cubic-bezier(0, 1, 1, 1) infinite;
+
+    overflow: hidden;
+
+    width: 200px;
+    height: 4.6rem;
+
+    margin: 0 0 1rem;
+
+    border-radius: .2rem;
+
+    box-shadow: .1rem .1rem .4rem 0 rgba(0, 0, 0, .1);
+}
+.captcha > .g-recaptcha {
+    position: relative;
+    top: -.4rem;
+    left: -.2rem;
 }
