--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -6316,6 +6316,10 @@ button.btn-floating {
   padding: 1.5rem;
 }
 
+.modal .modal-content > h5.modal-title {
+  margin: 0 0 2rem;
+}
+
 .modal .modal-close {
   cursor: pointer;
 }
@@ -6325,7 +6329,7 @@ button.btn-floating {
   background-color: #fafafa;
   width: 100%;
   text-align: right;
-  margin: 1.5rem 0 0;
+  margin: 3rem 0 0;
 }
 
 .modal-overlay {
