--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -46,6 +46,11 @@
   display: flex !important;
 }
 
+.flex-fill {
+  -ms-flex: 1 1 auto !important;
+  flex: 1 1 auto !important;
+}
+
 .flex-wrap {
   -ms-flex-wrap: wrap !important;
   flex-wrap: wrap !important;
@@ -5329,6 +5334,12 @@ small {
 .card .card-title {
   font-size: 24px;
   font-weight: 300;
+}
+
+@media (max-width: 36em) {
+  .card .card-title {
+    font-size: 20px;
+  }
 }
 
 .card .card-title > a.small {
