--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -10044,3 +10044,196 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 .rounded-0 {
     border-radius: 0 !important;
 }
+
+@font-face {
+    font-family: "gt-eesti";
+    src: url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Regular.eot");
+    src: url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Regular.eot?#iefix") format("embedded-opentype"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Regular.woff2") format("woff2"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Regular.woff") format("woff"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal
+}
+
+@font-face {
+    font-family: "gt-eesti";
+    src: url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Regular-Italic.eot");
+    src: url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Regular-Italic.eot?#iefix") format("embedded-opentype"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Regular-Italic.woff2") format("woff2"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Regular-Italic.woff") format("woff"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Regular-Italic.ttf") format("truetype");
+    font-weight: 400;
+    font-style: italic
+}
+
+@font-face {
+    font-family: "gt-eesti";
+    src: url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Medium.eot");
+    src: url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Medium.eot?#iefix") format("embedded-opentype"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Medium.woff2") format("woff2"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Medium.woff") format("woff"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Medium.ttf") format("truetype");
+    font-weight: 700;
+    font-style: normal
+}
+
+@font-face {
+    font-family: "gt-eesti";
+    src: url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Medium-Italic.eot");
+    src: url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Medium-Italic.eot?#iefix") format("embedded-opentype"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Medium-Italic.woff2") format("woff2"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Medium-Italic.woff") format("woff"),
+         url("../fonts/gt-eesti/GT-Eesti-Pro-Display-Medium-Italic.ttf") format("truetype");
+    font-weight: 700;
+    font-style: italic
+}
+
+body * {
+    font-family: 'gt-eesti', sans-serif;
+}
+
+header#main {
+  margin: 0;
+}
+header#main > .parallax-container {
+  min-height: 100vh;
+
+    display: -ms-flexbox;
+    display: flex;
+}
+header#main > .parallax-container > .container > .row > .col > a#logo {
+    display: table;
+    margin: 2rem 0;
+}
+header#main > .parallax-container > .container > .row > .col > a#logo > img {
+    max-width: 172px;
+}
+header#main > .parallax-container > .container > .row > .col > p {
+    margin: 0;
+}
+header#main > .parallax-container > .container > .row > .col > a {
+    margin: 2rem 0;
+}
+header#main > .parallax-container > .container > .row > .col > .down-area {
+    position: absolute !important;
+    top: auto;
+    z-index: 4;
+    right: 0;
+    bottom: 4rem;
+    left: 0;
+}
+header#main > .parallax-container > .parallax > video#background-video {
+    min-width: 100%;
+    min-height: 100%;
+}
+
+main {
+    padding: 1rem 0;
+
+    background-image: url(../img/main_bg.jpg);
+    background-repeat: repeat;
+    background-attachment: scroll;
+
+    background-color: #ccc;
+}
+
+footer.page-footer {
+  background-color: #fff;
+  background-image: url(../img/bg-1.svg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+footer.page-footer > .container > .row > .col > img#vz-logo {
+  max-width: 128px;
+}
+
+#features > .item {
+  padding: 1rem;
+}
+
+#more-step {
+    padding: 4% 0;
+    min-height: 100vh;
+}
+#more-step > .container > img#vz-logo-top {
+    display: table;
+    max-width: 240px;
+    margin: 4rem 0;
+}
+
+#team > .item {
+    display: -ms-flexbox;
+    display: flex;
+
+    -ms-flex-direction: column;
+    flex-direction: column;
+
+    padding: 1rem;
+}
+#team > .item > img {
+  width: 128px;
+  border-radius: 50% 50% 50% 0;
+  margin: 0 0 1rem;
+
+    -ms-flex-item-align: center;
+    align-self: center;
+}
+#team > .item > h6 {
+  font-size: 20px;
+  margin: 0 0 .5rem;
+
+    -ms-flex-item-align: center;
+    align-self: center;
+}
+#team > .item > p {
+  margin: 0;
+
+    -ms-flex-item-align: center;
+    align-self: center;
+}
+
+ul.partners {
+    display: -ms-flexbox;
+    display: flex;
+
+    -ms-flex-pack: center;
+    justify-content: center;
+
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+
+    margin: 0;
+    padding: 2rem 0;
+}
+ul.partners > li.partner {
+    -ms-flex-item-align: center;
+    align-self: center;
+    padding: 1rem;
+}
+
+.fast-menu {
+    margin-bottom: 1rem;
+
+    display: -ms-flexbox;
+    display: flex;
+
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+.fast-menu > a.card-panel {
+
+}
+.fast-menu > a.card-panel > img {
+    max-width: 64px;
+}
+
+@media (max-width: 1024px) {
+    .fast-menu > a.card-panel > img {
+        max-width: 24px;
+    }
+}
