--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -3452,7 +3452,7 @@ td, th {
   display: block;
   -webkit-transition: .25s;
   transition: .25s;
-  color: #26a69a;
+  color: #333;
 }
 
 .collection a.collection-item:not(.active):hover {
@@ -3698,7 +3698,7 @@ span.badge.new {
 }
 
 span.badge.new:after {
-  content: " new";
+  content: " yeni";
 }
 
 span.badge[data-badge-caption]::after {
@@ -5307,7 +5307,6 @@ small {
   transition: box-shadow .25s, -webkit-box-shadow .25s;
   padding: 24px;
   margin: 0.5rem 0 1rem 0;
-  border-radius: 2px;
   background-color: #fff;
 }
 
@@ -5328,7 +5327,6 @@ small {
   transition: -webkit-box-shadow .25s;
   transition: box-shadow .25s;
   transition: box-shadow .25s, -webkit-box-shadow .25s;
-  border-radius: 2px;
 }
 
 .card .card-title {
@@ -5415,7 +5413,6 @@ small {
 }
 
 .card.horizontal .card-image img {
-  border-radius: 2px 0 0 2px;
   max-width: 100%;
   width: auto;
 }
@@ -5473,7 +5470,6 @@ small {
 
 .card .card-image img {
   display: block;
-  border-radius: 2px 2px 0 0;
   position: relative;
   left: 0;
   right: 0;
@@ -5494,7 +5490,6 @@ small {
 
 .card .card-content {
   padding: 24px;
-  border-radius: 2px;
 }
 .card .card-content.card-content-sm {
   padding: 12px;
@@ -5519,10 +5514,6 @@ small {
   border-top: 1px solid rgba(160, 160, 160, 0.2);
   position: relative;
   padding: 16px 24px;
-}
-
-.card .card-action:last-child {
-  border-radius: 0 0 2px 2px;
 }
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating) {
@@ -5556,7 +5547,6 @@ small {
 }
 
 .card > .collection {
-  border-radius: 0;
   border-width: 0;
   margin: 0;
 }
@@ -5761,7 +5751,7 @@ small {
         -ms-flex-positive: 1;
             flex-grow: 1;
   }
-  .tabs .tab a {
+  .tabs .tab  
     padding: 0 12px;
   }
 }
@@ -6394,7 +6384,6 @@ button.btn-floating {
   width: 55%;
   margin: auto;
   overflow-y: auto;
-  border-radius: 2px;
   will-change: top, opacity;
 }
 
@@ -6435,7 +6424,6 @@ button.btn-floating {
 }
 
 .modal .modal-footer {
-  border-radius: 0 0 2px 2px;
   background-color: #fafafa;
   width: 100%;
   text-align: right;
@@ -6485,7 +6473,6 @@ button.btn-floating {
   margin: 0;
   width: 100%;
   max-height: 45%;
-  border-radius: 0;
   will-change: bottom, opacity;
 }
 
@@ -9864,6 +9851,7 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 }
 #dock-content > .menu {
   min-width: 240px;
+  max-width: 340px;
   margin: 0 0 0 1rem;
 
   overflow-x: auto;
